[gd_scene load_steps=19 format=2]

[ext_resource path="res://GameManager.gd" type="Script" id=1]
[ext_resource path="res://Wall/Wall_Creater(mouse).gd" type="Script" id=2]
[ext_resource path="res://Monster/MonsterManager.gd" type="Script" id=3]
[ext_resource path="res://_Image/Btn_Retry.png" type="Texture" id=4]
[ext_resource path="res://_Image/Btn_NextStage.png" type="Texture" id=5]
[ext_resource path="res://_Image/Btn_SelectStage.png" type="Texture" id=6]
[ext_resource path="res://_Image/BackGround.png" type="Texture" id=7]
[ext_resource path="res://_Image/button2.png" type="Texture" id=8]
[ext_resource path="res://Interactable/EndPoint.tscn" type="PackedScene" id=9]
[ext_resource path="res://Interactable/Battery.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://Interactable/Bomb.tscn" type="PackedScene" id=12]
[ext_resource path="res://Interactable/Booster.tscn" type="PackedScene" id=13]
[ext_resource path="res://Wall/Wall_Moving.tscn" type="PackedScene" id=14]
[ext_resource path="res://GUI/IngameGUI.tscn" type="PackedScene" id=15]
[ext_resource path="res://Stage/SceneController.tscn" type="PackedScene" id=16]
[ext_resource path="res://Wall/OutlineWall.tscn" type="PackedScene" id=17]
[ext_resource path="res://_Sound/cute/MenuSelect.mp3" type="AudioStream" id=18]

[node name="Stage3" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 662.844, 364.942 )
texture = ExtResource( 7 )

[node name="SceneController" parent="." instance=ExtResource( 16 )]

[node name="BackgroundSound" type="AudioStreamPlayer" parent="SceneController"]
stream = ExtResource( 18 )

[node name="EndPoint" parent="." instance=ExtResource( 9 )]
position = Vector2( 511.692, 596.538 )

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Player" parent="GameManager" instance=ExtResource( 11 )]
position = Vector2( 138.119, 606.119 )
rotation = -1.5708

[node name="MonsterManager" type="Node2D" parent="GameManager"]
script = ExtResource( 3 )

[node name="WallCreater" type="Node2D" parent="GameManager"]
script = ExtResource( 2 )

[node name="Battery" type="Node2D" parent="."]

[node name="Battery2" parent="Battery" instance=ExtResource( 10 )]
position = Vector2( 839.959, 594 )

[node name="Booster" type="Node2D" parent="."]

[node name="Booster" parent="Booster" instance=ExtResource( 13 )]
position = Vector2( 509.361, 179.865 )

[node name="Bomb" type="Node2D" parent="."]

[node name="Bomb" parent="Bomb" instance=ExtResource( 12 )]
position = Vector2( 471.236, 408.225 )

[node name="Bomb2" parent="Bomb" instance=ExtResource( 12 )]
position = Vector2( 1137.23, 159.32 )

[node name="Wall" type="Node2D" parent="."]
position = Vector2( 1, 0 )

[node name="OuterWall" parent="Wall" instance=ExtResource( 17 )]
position = Vector2( 654, 2.38419e-07 )
scale = Vector2( 2.38511, -0.913662 )

[node name="OuterWall2" parent="Wall" instance=ExtResource( 17 )]
position = Vector2( 649, 720 )
scale = Vector2( 2.38511, -0.913662 )

[node name="OuterWall3" parent="Wall" instance=ExtResource( 17 )]
position = Vector2( -0.625423, 430 )
rotation = 1.57079
scale = Vector2( 2.38511, -0.913662 )

[node name="OuterWall4" parent="Wall" instance=ExtResource( 17 )]
position = Vector2( 1279, 421 )
rotation = 1.57079
scale = Vector2( 2.38511, -0.913662 )

[node name="OuterWall5" parent="Wall" instance=ExtResource( 17 )]
position = Vector2( 382.616, 629.11 )
rotation = 1.57079
scale = Vector2( 0.35, -0.914 )

[node name="Wall_Moving" parent="Wall" instance=ExtResource( 14 )]
position = Vector2( 901.441, 460.811 )
rotation = 1.5708
scale = Vector2( 1, 2 )

[node name="IngameGUI" parent="." instance=ExtResource( 15 )]
margin_left = 653.151
margin_top = -4.051
margin_right = 653.151
margin_bottom = 11.949

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameClear" type="Control" parent="UI"]
visible = false
margin_left = 670.597
margin_top = 274.216
margin_right = 710.597
margin_bottom = 314.216
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UI/GameClear"]
position = Vector2( -35.597, 84.284 )
scale = Vector2( 0.527126, 0.503802 )
texture = ExtResource( 7 )

[node name="StageSelect" type="TextureButton" parent="UI/GameClear"]
margin_left = -228.0
margin_top = 107.0
margin_right = 786.0
margin_bottom = 409.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextStage" type="TextureButton" parent="UI/GameClear"]
margin_left = -231.0
margin_top = -78.0
margin_right = 800.0
margin_bottom = 263.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="UI"]
visible = false
margin_left = 675.429
margin_top = 273.642
margin_right = 715.429
margin_bottom = 313.642
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UI/GameOver"]
position = Vector2( -27.597, 79.784 )
scale = Vector2( 0.52097, 0.499366 )
texture = ExtResource( 7 )

[node name="Retry" type="TextureButton" parent="UI/GameOver"]
margin_left = -143.429
margin_top = -68.642
margin_right = 476.571
margin_bottom = 245.358
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )

[node name="StageSelect" type="TextureButton" parent="UI/GameOver"]
margin_left = -228.0
margin_top = 107.0
margin_right = 786.0
margin_bottom = 409.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 6 )

[node name="AllStageClear" type="Sprite" parent="UI"]
visible = false
position = Vector2( 687.442, 336.379 )
texture = ExtResource( 8 )

[connection signal="body_entered" from="EndPoint" to="GameManager" method="_on_EndPoint_body_entered"]
[connection signal="spawn_monster" from="GameManager" to="GameManager/MonsterManager" method="_on_GameManager_spawn_monster"]
[connection signal="body_entered" from="Battery/Battery2" to="GameManager/Player" method="_on_Battery_body_entered"]
[connection signal="body_entered" from="Battery/Battery2" to="Battery/Battery2" method="_on_Battery_body_entered"]
[connection signal="body_entered" from="Booster/Booster" to="GameManager/Player" method="_on_Booster_body_entered"]
[connection signal="body_entered" from="Booster/Booster" to="Booster/Booster" method="_on_Booster_body_entered"]
[connection signal="body_entered" from="Bomb/Bomb" to="GameManager" method="_on_Bomb_body_entered"]
[connection signal="body_entered" from="Bomb/Bomb" to="Bomb/Bomb" method="_on_Bomb_body_entered"]
[connection signal="body_entered" from="Bomb/Bomb2" to="GameManager" method="_on_Bomb_body_entered"]
[connection signal="body_entered" from="Bomb/Bomb2" to="Bomb/Bomb2" method="_on_Bomb_body_entered"]
[connection signal="pressed" from="UI/GameClear/StageSelect" to="SceneController" method="_load_scene" binds= [ "Select Stage" ]]
[connection signal="pressed" from="UI/GameClear/StageSelect" to="SceneController" method="_clear_stage" binds= [ "Stage4" ]]
[connection signal="pressed" from="UI/GameClear/NextStage" to="SceneController" method="_load_scene" binds= [ "Stage4" ]]
[connection signal="pressed" from="UI/GameClear/NextStage" to="SceneController" method="_clear_stage" binds= [ "Stage4" ]]
[connection signal="pressed" from="UI/GameOver/Retry" to="SceneController" method="_load_scene" binds= [ "Stage3" ]]
[connection signal="pressed" from="UI/GameOver/StageSelect" to="SceneController" method="_load_scene" binds= [ "Select Stage" ]]
